--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=test ts-node-dev --respawn --transpile-only src/app.ts"
+    "test": "NODE_ENV=test ",
+    "dev": "NODE_ENV=test ts-node-dev --respawn --transpile-only ./src/app.ts",
+    "build": ""
   },
   "author": "",
   "license": "ISC",
